# rmrk-ink-demo

./: .gitignore  Cargo.toml  justfile
contracts/body/: Cargo.toml  lib.rs
contracts/game/: Cargo.toml
contracts/game/src/: collection.rs  lib.rs  rand.rs
contracts/item/: Cargo.toml  lib.rs
script/: test_game.mjs
script/lib/: index.mjs  package-lock.json  package.json  rmrk.mjs  util.mjs
