[package]
name = "game"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
# ink = { version = "4.0.0-alpha.3", default-features = false } 

ink_primitives = { version = "3.4.0", default-features = false }
ink_metadata = { version = "3.4.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.4.0", default-features = false }
ink_storage = { version = "3.4.0", default-features = false }
ink_lang = { version = "3.4.0", default-features = false }
ink_prelude = { version = "3.4.0", default-features = false }


scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
openbrush = { tag = "v2.3.0", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["ownable", "psp34", "reentrancy_guard"] }

# rmrk = { git = "https://github.com/rmrk-team/rmrk-ink", default-features = false, features = [ "mintable" ] }
rmrk = { path = "../../lib/rmrk-ink/crates/rmrk", default-features = false, features = [ "mintable" ] }
body = { path = "../body", default-features = false, features = ["ink-as-dependency"]}
item = { path = "../item", default-features = false, features = ["ink-as-dependency"]}
rand_chacha = { version = "0.3.1", default-features = false }
rand = { version = "0.8.4", default-features = false, features = [ "alloc"] }

[lib]
name = "game"
path = "src/lib.rs"
crate-type = [ 
  "cdylib",
]


[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "rmrk/std"
]
ink-as-dependency = []